questions pages added

--- a/views/topics.ejs
+++ b/views/topics.ejs
@@ -8,7 +8,7 @@
     <h1>Topics</h1>
     <ul>
         <% topics.forEach(topic => { %>
-            <li><a href="/topics/<%= topic.id %>/1"><%= topic.name %></a></li>
+            <li><a href="/topics/<%= topic.name %>/1"><%= topic.name %></a></li>
         <% }) %>
     </ul>
     <a href="/">Back to Home</a>
