--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>About <%=shopName%></title>
+    <title>About <%=appName%></title>
     <link rel="stylesheet"  type="text/css" href="/main.css" />
   </head>
   <body>
@@ -11,9 +11,10 @@
     <p>Perfect for students taking theory exams or anyone simply interested in learning music theory :) </p>
     <p>Features:</p>
     <ul>
-      <li>Explore flashcards on topics like Scales, Intervals, Cadences, and more.</li>
-      <li>Add your own flashcards to reinforce your learning.</li>
+      <li>Explore questions on topics like Intervals, Cadences, and more.</li>
+      <li>Add your own questions to reinforce your learning.</li>
       <li>Use the search feature to quickly find specific flashcards.</li>
     </ul>
+    <a href="/">Back to Home</a>
   </body>
 </html>
