--- a/views/answer-feedback.ejs
+++ b/views/answer-feedback.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Answer Feedback</title>
+    <link rel="stylesheet"  type="text/css" href="/main.css" />
 </head>
 <body>
     <h1>Answer Feedback</h1>
@@ -22,5 +23,6 @@
     </div>    
 
     <a href="/topics">Back to Topics</a>
+    <a href="/">Back to Home</a>
 </body>
 </html>
