--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Question <%= questionNumber %></title>
+    <link rel="stylesheet"  type="text/css" href="/main.css" />
 </head>
 <body>
     <h1>Question <%= questionNumber %></h1>
@@ -36,5 +37,6 @@
     </div>
 
     <a href="/topics">Back to Topics</a>
+    <a href="/">Back to Home</a>
 </body>
 </html>
