--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,15 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>Search <%=shopName%></title>
+    <title>Search <%=appName%></title>
     <link rel="stylesheet"  type="text/css" href="/main.css" />
   </head>
   <body>
-    <h1>Search <%=shopName%></h1>
+    <h1>Search <%=appName%></h1>
     <form action="/search-result" method="GET">
-      <p>What book do you want?</p>
+      <p>What are you looking for?</p>
       <input id="search-box" type="text" name="keyword" value="Default">
       <input type="submit" value="Search" >
     </form>
+
+    <a href="/">Back to Home</a>
   </body>
 </html>
